--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="src/banana.ico">
 
+
     <link href="src/style.css" rel="stylesheet">
     <title>Офисное приложение</title>
 </head>
-<body class="bg-gray-100 dark:bg-gray-300 transition-all duration-300">
-
+<body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
 <!-- Навигация -->
-<nav class="bg-blue-300 dark:bg-blue-800 p-5 shadow-xl transition-colors duration-300">
+<nav class="bg-nav-ligth dark:bg-nav-dark p-5 shadow-xl transition-colors duration-300">
 
     <div class="flex justify-between items-center">
         <!-- Левая часть -->
         <div class="flex items-center gap-5 pl-5 ">
             <img src="src/eating.ico" alt="Логотип" class="h-20 w-20">
-            <h1 class="text-gray-800 dark:text-white text-5xl font-semibold">Lazy Ilia</h1>
+            <h1 class="text-text-light dark:text-text-dark text-5xl font-semibold font-logo">Lazy Ilia</h1>
         </div>
 
         <!-- Меню (десктоп) -->
         <div class="hidden lg:flex items-center gap-5">
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Главная</a>
+               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Главная</a>
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Города</a>
+               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Города</a>
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white">Статистика</a>
+               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Статистика</a>
             <a href="#"
-               class="text-gray-800 dark:text-gray-200 py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-white">Выход</a>
+               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-hover-text-dark">Выход</a>
         </div>
 
 
