--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,82 +7,72 @@
 
 
     <link href="src/style.css" rel="stylesheet">
-    <title>Офисное приложение</title>
+    <title>Вход</title>
 </head>
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
-<!-- Навигация -->
-<nav class="bg-nav-ligth dark:bg-nav-dark p-5 shadow-xl transition-colors duration-300">
 
-    <div class="flex justify-between items-center">
-        <!-- Левая часть -->
-        <div class="flex items-center gap-5 pl-5 ">
-            <img src="src/eating.ico" alt="Логотип" class="h-20 w-20">
-            <h1 class="text-text-light dark:text-text-dark text-5xl font-semibold font-logo">Lazy Ilia</h1>
+<main class="flex justify-center items-center h-screen">
+    <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 transition-colors duration-300">
+
+        <!-- Переключатель темы внутри формы -->
+        <button id="theme-toggle" type="button" class="absolute top-4 right-4 text-yellow-500 dark:text-yellow-400">
+            <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
+                 fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="w-6 h-6 hidden">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75
+              c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752
+              A9.753 9.753 0 0 0 3 11.25
+              C3 16.635 7.365 21 12.75 21
+              a9.753 9.753 0 0 0 9.002-5.998Z"/>
+            </svg>
+            <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg"
+                 fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21
+              m-4.773-4.227-1.591 1.591M5.25 12H3
+              m4.227-4.773L5.636 5.636
+              M15.75 12a3.75 3.75 0 1 1-7.5 0
+              3.75 3.75 0 0 1 7.5 0Z"/>
+            </svg>
+        </button>
+
+        <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Вход</h2>
+
+        <div>
+            <label for="username" class="block mb-2  font-medium text-text-light dark:text-text-dark">Логин</label>
+            <input type="text" id="username" name="username"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Имя пользователя"
+            >
         </div>
 
-        <!-- Меню (десктоп) -->
-        <div class="hidden lg:flex items-center gap-5">
-            <a href="#"
-               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Главная</a>
-            <a href="#"
-               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Города</a>
-            <a href="#"
-               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-hover-light dark:hover:bg-hover-dark hover:text-hover-text-light dark:hover:text-hover-text-dark">Статистика</a>
-            <a href="#"
-               class="text-text-light dark:text-text-dark py-3 w-30 text-center text-xl font-medium rounded transition-colors duration-200 hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-hover-text-dark">Выход</a>
+        <div>
+            <div class="flex justify-between items-center mb-2">
+                <label for="password" class="text-text-light dark:text-text-dark font-medium">Пароль</label>
+                <a href="#" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
+            </div>
+            <input type="password" id="password" name="password"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Пароль"
+            >
         </div>
 
-
-        <!-- Кнопки справа -->
-        <div class="flex items-center">
-            <!-- Переключатель темы -->
-            <button id="theme-toggle" class="text-yellow-500 dark:text-yellow-400 p-4 h-20 w-20">
-                <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                     stroke="currentColor" class="w-10 h-10 hidden">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
-                </svg>
-                <svg id="theme-toggle-light-icon" class="w-10 h-10 hidden" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
-                </svg>
+        <div class="flex justify-center items-center">
+            <button type="submit"
+                    class="w-50 py-2 text-text-light dark:text-text-dark bg-button hover:bg-hover-button rounded font-semibold transition-colors">
+                Войти
             </button>
-
-            <!-- Бургер (моб) -->
-            <button id="burger-menu" class="text-gray-700 dark:text-white p-4 h-20 w-20 lg:hidden">
-
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
         </div>
-    </div>
 
-    <!-- Мобильное меню -->
-    <div id="nav-menu"
-         class="flex-col space-y-2 mt-4 lg:hidden max-h-0 overflow-hidden transition-all duration-300 block ">
-        <a href="#"
-           class="text-gray-800 dark:text-gray-200 pl-5 py-2  text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Главная</a>
-        <a href="#"
-           class="text-gray-800 dark:text-gray-200 pl-10 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Города</a>
-        <a href="#"
-           class="text-gray-800 dark:text-gray-200 pl-15 py-2 text-xl font-medium  rounded hover:bg-blue-200 dark:hover:bg-blue-600 hover:text-blue-900 dark:hover:text-white transition-colors block">Статистика</a>
-        <a href="#"
-           class="text-gray-800 dark:text-gray-200 pl-30 py-2 text-xl font-medium  rounded hover:bg-red-200 dark:hover:bg-red-600 hover:text-red-900 dark:hover:text-white transition-colors block">Выход</a>
-    </div>
 
-</nav>
-
-<!-- Контент -->
-<main class="p-4 text-gray-800 dark:text-gray-900 rounded shadow-inner">
-
-    <h1 class="text-2xl font-semibold">Работа с документами</h1>
-    <p>Здесь будет отображаться текст документа Word.</p>
+        <p class="text-center text-sm text-text-light dark:text-text-dark">
+            Нет аккаунта?
+            <a href="#" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
+        </p>
+    </form>
 </main>
+
 
 <script type="module" src="src/main.js">
 
