--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,78 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="src/banana.ico">
-
-
     <link href="src/style.css" rel="stylesheet">
-    <title>Вход</title>
+    <title>Регистрация</title>
 </head>
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
 
-<main class="flex justify-center items-center h-screen">
-    <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 transition-colors duration-300">
+<main class="flex justify-center items-center min-h-screen py-6">
+    <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto">
 
         <!-- Переключатель темы внутри формы -->
         <button id="theme-toggle" type="button" class="absolute top-4 right-4 text-yellow-500 dark:text-yellow-400">
-            <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg"
-                 fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                 stroke="currentColor" class="w-6 h-6 hidden">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                      d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75
-              c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752
-              A9.753 9.753 0 0 0 3 11.25
-              C3 16.635 7.365 21 12.75 21
-              a9.753 9.753 0 0 0 9.002-5.998Z"/>
+            <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hidden">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"/>
             </svg>
-            <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg"
-                 fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                      d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21
-              m-4.773-4.227-1.591 1.591M5.25 12H3
-              m4.227-4.773L5.636 5.636
-              M15.75 12a3.75 3.75 0 1 1-7.5 0
-              3.75 3.75 0 0 1 7.5 0Z"/>
+            <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"/>
             </svg>
         </button>
 
-        <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Вход</h2>
+        <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
 
         <div>
-            <label for="username" class="block mb-2  font-medium text-text-light dark:text-text-dark">Логин</label>
+            <label for="username" class="block mb-2 font-medium text-text-light dark:text-text-dark">Логин</label>
             <input type="text" id="username" name="username"
                    class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                   placeholder="Имя пользователя"
+                   placeholder="Логин"
             >
         </div>
 
         <div>
-            <div class="flex justify-between items-center mb-2">
-                <label for="password" class="text-text-light dark:text-text-dark font-medium">Пароль</label>
-                <a href="#" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
-            </div>
+            <label for="first_name" class="block mb-2 font-medium text-text-light dark:text-text-dark">Имя</label>
+            <input type="text" id="first_name" name="first_name"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Имя"
+            >
+        </div>
+
+        <div>
+            <label for="last_name" class="block mb-2 font-medium text-text-light dark:text-text-dark">Фамилия</label>
+            <input type="text" id="last_name" name="last_name"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Фамилия"
+            >
+        </div>
+
+        <div>
+            <label for="phone" class="block mb-2 font-medium text-text-light dark:text-text-dark">Телефон</label>
+            <input type="tel" id="phone" name="phone"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Телефон"
+            >
+        </div>
+
+        <div>
+            <label for="password" class="block mb-2 font-medium text-text-light dark:text-text-dark">Пароль</label>
             <input type="password" id="password" name="password"
                    class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
                    placeholder="Пароль"
             >
         </div>
 
-        <div class="flex justify-center items-center">
+        <div>
+            <label for="confirm_password" class="block mb-2 font-medium text-text-light dark:text-text-dark">Подтверждение пароля</label>
+            <input type="password" id="confirm_password" name="confirm_password"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   placeholder="Подтвердите пароль"
+            >
+        </div>
+
+        <div class="flex justify-center items-center space-x-4">
             <button type="submit"
-                    class="w-50 py-2 text-text-light dark:text-text-dark bg-button hover:bg-hover-button rounded font-semibold transition-colors">
-                Войти
+                    class="w-auto p-2 text-text-light dark:text-text-dark bg-blue-500 hover:bg-blue-600 rounded font-semibold transition-colors">
+                Зарегистрироваться
+            </button>
+            <button type="button" onclick="window.location.href='/'"
+                    class="w-auto p-2 text-text-light dark:text-text-dark bg-gray-500 hover:bg-gray-600 rounded font-semibold transition-colors">
+                Отменить
             </button>
         </div>
 
-
         <p class="text-center text-sm text-text-light dark:text-text-dark">
-            Нет аккаунта?
-            <a href="#" class="text-blue-500 hover:underline dark:text-blue-400">Зарегистрироваться</a>
+            Уже есть аккаунт?
+            <a href="/login" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
         </p>
     </form>
 </main>
 
-
-<script type="module" src="src/main.js">
-
-</script>
+<script type="module" src="src/main.js"></script>
 </body>
 </html>
