--- a/lazy_ilya/myauth/frontend/base.html
+++ b/lazy_ilya/myauth/frontend/base.html
@@ -12,5 +12,6 @@
 
 
 <script type="module" src="src/js/base.js"></script>
+<script src="node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
