--- a/lazy_ilya/myauth/frontend/registration.html
+++ b/lazy_ilya/myauth/frontend/registration.html
@@ -10,32 +10,60 @@
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
 
 <main class="flex justify-center items-center min-h-screen py-6">
-    <form class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto">
+    <form id="registration-form"
+          class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto">
 
         <!-- Переключатель темы внутри формы -->
-        <button id="theme-toggle" type="button" class="absolute top-4 right-4 text-yellow-500 dark:text-yellow-400">
-            <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hidden">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
+        <button id="theme-toggle" type="button" class="theme-toggle">
+            <svg id="theme-toggle-dark-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hidden">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
             </svg>
-            <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
+            <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" xmlns="http://www.w3.org/2000/svg" fill="none"
+                 viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
             </svg>
         </button>
 
         <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
 
-        <div>
-            <label for="username" class="block mb-2 font-medium text-text-light dark:text-text-dark">Логин</label>
-            <input type="text" id="username" name="username"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                   placeholder="Логин"
-            >
+        <div id="login-field">
+            <label for="email-address-icon"
+                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                   id="login-label">
+                Логин
+            </label>
+
+            <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                         viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400" id="login-icon">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963
+                      0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12
+                      21a8.966 8.966 0 0 1-5.982-2.275M15
+                      9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path>
+                    </svg>
+                </div>
+
+                <input type="text" id="email-address-icon"
+                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-12 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                       placeholder="Придумайте логин">
+            </div>
+
+            <p id="login-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
+            </p>
         </div>
+
 
         <div>
             <label for="first_name" class="block mb-2 font-medium text-text-light dark:text-text-dark">Имя</label>
             <input type="text" id="first_name" name="first_name"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
                    placeholder="Имя"
             >
         </div>
@@ -43,42 +71,74 @@
         <div>
             <label for="last_name" class="block mb-2 font-medium text-text-light dark:text-text-dark">Фамилия</label>
             <input type="text" id="last_name" name="last_name"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg  bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
                    placeholder="Фамилия"
             >
         </div>
 
-        <div>
-            <label for="phone" class="block mb-2 font-medium text-text-light dark:text-text-dark">Телефон</label>
-            <input type="tel" id="phone" name="phone"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
-                   placeholder="Телефон"
+        <div class="mb-4">
+            <label for="phone" class="block mb-2 font-medium text-text-light dark:text-text-dark">
+                <div class="flex items-center justify-between">
+                    <span>Телефон</span>
+                    <div class="relative group">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24"
+                             stroke-width="1.5" stroke="currentColor"
+                             class="w-5 h-5 text-gray-400 cursor-pointer">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0
+                 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442
+                 -.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0
+                 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"></path>
+                        </svg>
+
+                        <!-- Tooltip -->
+                        <div
+                                class="absolute right-0 bottom-full mb-1 w-auto whitespace-nowrap p-2 text-center text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
+                            Номер телефона нужен для восстановления пароля.
+                        </div>
+                    </div>
+                </div>
+            </label>
+
+            <input
+                    type="tel"
+                    id="phone"
+                    name="phone"
+                    placeholder="+7 (___) ___-__-__"
+                    class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg  bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
             >
+
+            <!-- блок ошибки -->
+            <p id="phone-error" class="mt-1 text-sm text-red-500 hidden">
+                Введите корректный номер телефона.
+            </p>
         </div>
 
         <div>
             <label for="password" class="block mb-2 font-medium text-text-light dark:text-text-dark">Пароль</label>
             <input type="password" id="password" name="password"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg  bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
                    placeholder="Пароль"
             >
         </div>
 
         <div>
-            <label for="confirm_password" class="block mb-2 font-medium text-text-light dark:text-text-dark">Подтверждение пароля</label>
+            <label for="confirm_password" class="block mb-2 font-medium text-text-light dark:text-text-dark">Подтверждение
+                пароля</label>
             <input type="password" id="confirm_password" name="confirm_password"
-                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                   class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg  bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
                    placeholder="Подтвердите пароль"
             >
         </div>
 
         <div class="flex justify-center items-center space-x-4">
-            <button type="submit"
-                    class="w-auto p-2 text-text-light dark:text-text-dark bg-blue-500 hover:bg-blue-600 rounded font-semibold transition-colors">
+            <button id="submit-btn" type="submit"
+                    class="btn-submit">
                 Зарегистрироваться
             </button>
             <button type="button" onclick="window.location.href='/'"
-                    class="w-auto p-2 text-text-light dark:text-text-dark bg-gray-500 hover:bg-gray-600 rounded font-semibold transition-colors">
+                    class="btn-cancel">
                 Отменить
             </button>
         </div>
@@ -91,5 +151,7 @@
 </main>
 
 <script type="module" src="src/js/base.js"></script>
+<script src="node_modules/flowbite/dist/flowbite.min.js"></script>
+<script type="module" src="src/js/registration.js"></script>
 </body>
 </html>
