--- a/lazy_ilya/myauth/frontend/registration.html
+++ b/lazy_ilya/myauth/frontend/registration.html
@@ -11,7 +11,7 @@
 
 <main class="flex justify-center items-center min-h-screen py-6">
     <form id="registration-form"
-          class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto">
+          class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto animate-fade-in">
 
         <!-- Переключатель темы внутри формы -->
         <button id="theme-toggle" type="button" class="theme-toggle">
@@ -191,7 +191,7 @@
                     class="btn-submit">
                 Зарегистрироваться
             </button>
-            <button type="button" onclick="window.location.href='/'"
+            <button type="button" onclick="window.location.href='http://localhost:5173/login.html'"
                     class="btn-cancel">
                 Отменить
             </button>
@@ -199,7 +199,7 @@
 
         <p class="text-center text-sm text-text-light dark:text-text-dark">
             Уже есть аккаунт?
-            <a href="/login" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
+            <a href="http://localhost:5173/login.html" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
         </p>
     </form>
 </main>
